include_directories(
	${UTAHRLE_INCLUDE_DIR}
	${${CMAKE_PROJECT_NAME}_SOURCE_DIR}/include
	${CMAKE_CURRENT_SOURCE_DIR}
)

add_subdirectory(clock)

add_executable(applymap applymap.c)
add_executable(avg4 avg4.c)
add_executable(crop crop.c rle_box.c)
add_executable(fant fant.c mallocNd.c)
add_executable(into into.c)
add_executable(mcut mcut.c)
add_executable(mergechan mergechan.c)
add_executable(pyrmask pyrmask.c pyrlib.c)
add_executable(repos repos.c)
add_executable(rleaddcom rleaddcom.c)
add_executable(rlebg rlebg.c)
add_executable(rlebox rlebox.c rle_box.c)
add_executable(rlecat rlecat.c)
add_executable(rleccube rleccube.c)
add_executable(rlecomp rlecomp.c)
add_executable(rledither rledither.c)
add_executable(rleflip rleflip.c)
add_executable(rlegrid rlegrid.c)
add_executable(rlehdr rlehdr.c)
add_executable(rlehisto rlehisto.c)
add_executable(rleinterp rleinterp.c)
add_executable(rleldmap rleldmap.c)
add_executable(rlemandl rlemandl.c)
add_executable(rlenoise rlenoise.c)
add_executable(rlepatch rlepatch.c)
add_executable(rleprint rleprint.c)
add_executable(rlequant rlequant.c)
add_executable(rlescale rlescale.c)
add_executable(rleselect rleselect.c)
add_executable(rlesetbg rlesetbg.c)
add_executable(rlesortmap rlesortmap.c)
add_executable(rlespiff rlespiff.c)
add_executable(rlesplice rlesplice.c)
add_executable(rlesplit rlesplit.c)
add_executable(rlestereo rlestereo.c)
add_executable(rleswap rleswap.c)
add_executable(rlezoom rlezoom.c)
add_executable(smush smush.c)
add_executable(to8 to8.c)
add_executable(tobw tobw.c)
add_executable(unexp unexp.c)
add_executable(unslice unslice.c)

target_link_libraries(applymap utahrle)
target_link_libraries(avg4 utahrle)
target_link_libraries(crop utahrle)
target_link_libraries(fant utahrle)
target_link_libraries(into utahrle)
target_link_libraries(mcut utahrle)
target_link_libraries(mergechan utahrle)
target_link_libraries(pyrmask utahrle)
target_link_libraries(repos utahrle)
target_link_libraries(rleaddcom utahrle)
target_link_libraries(rlebg utahrle)
target_link_libraries(rlebox utahrle)
target_link_libraries(rlecat utahrle)
target_link_libraries(rleccube utahrle)
target_link_libraries(rlecomp utahrle)
target_link_libraries(rledither utahrle)
target_link_libraries(rleflip utahrle)
target_link_libraries(rlegrid utahrle)
target_link_libraries(rlehdr utahrle)
target_link_libraries(rlehisto utahrle)
target_link_libraries(rleinterp utahrle)
target_link_libraries(rleldmap utahrle)
target_link_libraries(rlemandl utahrle)
target_link_libraries(rlenoise utahrle)
target_link_libraries(rlepatch utahrle)
target_link_libraries(rleprint utahrle)
target_link_libraries(rlequant utahrle)
target_link_libraries(rlescale utahrle)
target_link_libraries(rleselect utahrle)
target_link_libraries(rlesetbg utahrle)
target_link_libraries(rlesortmap utahrle)
target_link_libraries(rlespiff utahrle)
target_link_libraries(rlesplice utahrle)
target_link_libraries(rlesplit utahrle)
target_link_libraries(rlestereo utahrle)
target_link_libraries(rleswap utahrle)
target_link_libraries(rlezoom utahrle)
target_link_libraries(smush utahrle)
target_link_libraries(to8 utahrle)
target_link_libraries(tobw utahrle)
target_link_libraries(unexp utahrle)
target_link_libraries(unslice utahrle)
